Fixed texts made description always visible set spell importance default to 0.58

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -649,7 +649,7 @@ button.disabled {
   margin-top: 70px;
 
   text-align: justify;
-  opacity: 0.4;
+  opacity: 1;
 
   font-weight: 300;
   font-size: large;
@@ -658,10 +658,6 @@ button.disabled {
 .center {
   margin: auto auto auto 32%;
   padding: 40px;
-}
-
-.guidedExplanation:hover {
-  opacity: 1;
 }
 
 /*
